--- a/Portfolio/css/style.css
+++ b/Portfolio/css/style.css
@@ -19,9 +19,13 @@ header{
     box-shadow: 0vw 0vw 1vw 0.5vw rgba(69, 195, 237, 1);    
 }
 header a{
+    width: 10vw;
     margin: 5vw;
     color: black;
     text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 header a:hover{
     color: #45c3ed;
@@ -45,6 +49,7 @@ header a:hover{
     width: 60vw;
     display: flex;
     align-items: center;
+    justify-content: center;
     flex-direction: column;
     border-radius: 5vw;
     padding: 2vw;
@@ -100,6 +105,12 @@ header a:hover{
     color:white;
     box-shadow: 0vw 0vw 1vw 0.5vw rgba(69, 195, 237, 0.6),
     inset 0vw 0vw 1vw 0.5vw rgba(69, 195, 237, 0.6);
+}
+.descripcion{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 .descripcion li{
     margin: 2vw 0;
@@ -183,4 +194,8 @@ header a:hover{
     width: 100%;
     display: flex;
     justify-content: center;
+}
+
+.masInfo{
+    width: 80vw;
 }
