creado el proyecto g5Forces y arregladas las conexiones entre archivos

--- a/Portfolio/css/style.css
+++ b/Portfolio/css/style.css
@@ -183,7 +183,7 @@ header a:hover{
 
 .modalContenido img{
     margin: 1vw;
-    width: 70%;
+    width: 50vw;
 }
 .modalContenido video{
     margin: 5vw;
